# deep-learning-group-project

./: .gitignore  COMPLETE.md  HOW_TO_RUN.md  HW2_Chinese_Handwriting.executed.ipynb  HW2_Chinese_Handwriting.ipynb  HW2_Chinese_Handwriting_Note.md  PROJECT_STRUCTURE.md  README.md  TESTING.md  UPDATE_SUMMARY.md  VISUAL_GUIDE.md  app.py  check_setup.py  controller.py  controller_tflite.py  controls.py  convert_h5_to_tflite.py  deep_learning_assignment2 (1).ipynb  game.py  labels.txt  list_cameras.py  model_unquant.tflite  model_unquant1.tflite  pyproject.toml  requirements.txt  setup_and_run.sh  start.sh  test_model.py
catcher/: .gitignore  INSTALL.md  README.md  audio.py  audio2.py  capture.py  capture2.py  main.py  pipeline.py  report.py  report2.py  requirements.txt  summarize.py  summarize2.py
catcher/config/: default.yaml
catcher/src/: alignment.py  capture_loop.py  clarity.py  ocr.py  pipeline.py  report_pdf.py  textual_loop.py  whisper_asr.py
classroom_blackboard_analytics/: .gitignore  README.md  requirements.txt
classroom_blackboard_analytics/config/: default.yaml  reference_keywords.txt
classroom_blackboard_analytics/scripts/: run_analysis.cmd  run_analysis.py  run_web.cmd  run_web_public_tunnel.py  smoke_test_env.py  train_yolo.py
config/: default.yaml
eduapp-main/: FLOWCHART_APP_NAVIGATION.md  FLOWCHART_DATA_ARCHITECTURE.md  FLOWCHART_USER_JOURNEY.md  PROPOSAL.md  package-lock.json
scripts/: run_analysis.py  run_web.py  run_web_public_tunnel.py  smoke_test_env.py
static/: game.js
templates/: index.html
uploads/: .gitkeep
web/: server.py
(+60 files in other folders)
