[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blackboard-analytics"
version = "0.1.0"
description = "Classroom blackboard handwriting OCR, clarity, speech alignment, and PDF reports"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
